Fix: Make improvements
Fix Edge layout issues on documentation landing page, clean up
unused CSS, and remove unnecessary font weights.

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

Fix #126
Fix #218
Fix #219

Close #221

--- a/src/hexo/themes/documentation/source/core/css/documentation.css
+++ b/src/hexo/themes/documentation/source/core/css/documentation.css
@@ -113,7 +113,7 @@ a > .documentation-card__main > img {
 	}
 
 	.documentation > .bare {
-		margin-top: 4.8rem;
+		margin-top: 2.4rem;
 	}
 
 }
